--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^1.3.5",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
+    "mongodb": "^5.6.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.20.0",
     "vue": "^3.2.13",
